k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k" # this is needed to accept the OIDC cookie from the IDP
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
            path: /api/
          - pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
            path: /swagger
          - pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
            path: /
  tls:
    - hosts:
      - localhost
      secretName: tls-certificate
